--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "44bc2c76-3545-44e2-98bb-b2bb9b05f289"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
